--- a/style.css
+++ b/style.css
@@ -6,7 +6,15 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+.adresse{
+    width: 500px;
+    padding-left: 50px;
+    padding-top: 20px;
 
+}
+.logo{
+    margin-bottom: 30px;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -45,7 +53,7 @@ a:hover {
 }
 
 .bloc-lg {
-    padding: 100px 50px;
+    padding: 50px 50px;
 }
 
 .bloc-md {
@@ -283,9 +291,9 @@ a:hover {
     padding-left: 0;
 }
 
-#bloc-1-hero h1 {
+/*#bloc-1-hero h1 {
     font-size: 32px;
-}
+}*/
 
 .navbar {
     margin-bottom: 0;
@@ -331,6 +339,12 @@ a:hover {
 .navbar-nav .open .dropdown-menu > li > a {
     text-align: inherit;
 }
+.navbar-nav a:hover{
+    border-top: solid 5px #021B79;
+
+}
+
+
 
 .nav > li a:hover,
 .nav > li a:focus {
@@ -458,15 +472,13 @@ nav .caret {
 .btn-d:focus {
     color: #FFF;
     background: rgba(0, 0, 0, .3);
+   
 }
 
 button {
     outline: none!important;
 }
 
-.btn-rd {
-    border-radius: 40px;
-}
 
 .btn-clean {
     border: 1px solid rgba(0, 0, 0, .08);
@@ -508,6 +520,18 @@ button {
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    display: block;
+    width: 500px;
+    height: 25px;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 15px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    
+    border: 1px solid #212529;
+    border-radius: 5px;
 }
 
 .scrollToTop {
@@ -677,7 +701,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 14px;
 }
 
 .tight-width-whitespace {
@@ -737,10 +761,12 @@ h4 {
 
 .white {
     color: #FFFFFF!important;
+    margin-bottom: 30px;
 }
 
 .portfolio-thumb {
     margin-bottom: 24px;
+    border-radius: 20px 20px 0 0;
 }
 
 .portfolio-row {
@@ -759,7 +785,7 @@ h4 {
 
 .bold-link {
     font-weight: 900;
-    text-decoration: underline!important;
+    font-size: 20px;
 }
 
 .bgc-white {
@@ -771,25 +797,34 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #414345;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #Ffffff!important;
+    text-align: center;
+    
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #0575E6;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #021B79, #0575E6);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #021B79, #0575E6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #FFFFFF!important;
+    border-radius: 30px;
+    width: 200px;
+    
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #021B79!important;
     color: #FFFFFF!important;
+    transform: scale(1.15);
 }
 
 .ltc-white {
     color: #FFFFFF!important;
+    
 }
 
 .ltc-white:hover {
@@ -825,6 +860,10 @@ h4 {
     background-image: url("img/image-de-presentation.bmp");
 }
 
+.h2-center{
+    padding-left: 150px;
+    padding-right: 150px;
+}
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
